@@ -1,3 +1,8 @@
+2007-03-30  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* generic/udp_tcl.c: Added support for IP_MULTICAST_LOOP for
+	Konstantin Khomoutov to control multicast loopback transmission.
+
 2007-01-31  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* generic/udp_tcl.c: Turns out the HP-UX patch break buiding on
